Hide debug menu where no one will find it

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
     <audio id='musicPlayer' src='sound/music.mp3'></audio>
     <audio id='gameOverSoundPlayer' src='sound/gameOver.wav'></audio>
     <!-- Super secret hidden debug area.  Don't change the class to anything else -->
-    <div id="cheats" class="siuperSekritHiddenDiv">
+    <div id="cheats" class="superSekritHiddenDiv">
       <h3>Select options and select reset to apply</h3>
       <button type='button' id='hardcoreMode'>Hardcore Mode</button><br/>
       <button type='button' id='rainbow'>Rainbow Snake</button><br/>
